try to split request into two when parsing error occurs

--- a/config/dev.exs.sample
+++ b/config/dev.exs.sample
@@ -5,3 +5,5 @@ config :amqp,
        connections: [
          amqp_connection: [url: "amqp://guest:guest@localhost/"],
        ]
+
+config :logger, level: :debug
